Add toastr notification

--- a/AspNetCoreMVCApp/AspNetCoreMVCWeb/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreMVCApp/AspNetCoreMVCWeb/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/css/bootswatchTheme.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/bootstrap-icons.css" />
+    <link rel="stylesheet" href="~/lib/toastr/toastr.min.css" />
     <link rel="stylesheet" href="~/AspNetCoreMVCWeb.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -47,6 +48,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Notification" />
             @RenderBody()
         </main>
     </div>
