--- a/AspNetCoreMVCApp/AspNetCoreMVCWeb/Views/Category/Index.cshtml
+++ b/AspNetCoreMVCApp/AspNetCoreMVCWeb/Views/Category/Index.cshtml
@@ -25,6 +25,7 @@
             <th>
                 Display Order
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -37,6 +38,19 @@
                 <td width="30%">
                     @obj.DisplayOrder
                 </td>
+                <td>
+                    <div class="w-100 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square">
+                                    <p class="d-none d-xl-inline">Edit</p>
+                            </i>
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <i class="bi bi-trash3">
+                                 <p class="d-none d-xl-inline">Delete</p>
+                            </i>
+                        </a>
+                    </div>
             </tr>
         }
     </tbody>
